--- a/package.json
+++ b/package.json
@@ -5,13 +5,28 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "file-type": "^18.5.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "serverless-http": "^3.1.1",
+    "wav": "^1.0.2",
     "zod": "^3.22.2"
+  },
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "eslint": "^8.51.0",
+    "nodemon": "^3.0.1"
   }
 }
