--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.32.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "pg": "^8.11.3",
