--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.11.3",
     "serverless-http": "^3.1.1",
     "wav": "^1.0.2",
+    "wavefile": "^11.0.0",
     "zod": "^3.22.2"
   },
   "scripts": {
