--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1476.0",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "buffer": "^6.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "file-type": "^18.5.0",
     "fs": "^0.0.1-security",
@@ -19,6 +22,7 @@
     "pg": "^8.11.3",
     "serverless-http": "^3.1.1",
     "wav": "^1.0.2",
+    "wav-decoder": "^1.3.0",
     "wavefile": "^11.0.0",
     "zod": "^3.22.2"
   },
