--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "file-type": "^18.5.0",
+    "fontkit": "^2.0.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.32.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.11.3",
     "serverless-http": "^3.1.1",
     "wav": "^1.0.2",
