--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "serverless-http": "^3.1.1",
     "wav": "^1.0.2",
     "wavefile": "^11.0.0",
-    "zod": "^3.22.2"
+    "zod": ">=3.22.3"
   },
   "scripts": {
     "start": "node src/index.js",
