--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "serverless-http": "^3.1.1",
     "wav": "^1.0.2",
