--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "buffer": "^6.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "file-type": "^18.5.0",
@@ -23,6 +24,7 @@
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "serverless-http": "^3.1.1",
+    "socket.io": "^4.7.2",
     "wav": "^1.0.2",
     "wavefile": "^11.0.0",
     "zod": ">=3.22.3"
